protobuf_generate_cpp(REPLICA_PB_SRCS REPLICA_PB_HDRS protocol.proto)

add_library(replica SHARED)

target_compile_options(replica PRIVATE
    -Wno-maybe-uninitialized
)

target_sources(replica PRIVATE
    ${REPLICA_PB_SRCS}
    ${REPLICA_PB_HDRS}
    AbortTransactionApp.cc
    AbortTransactionApp.h
    AbortTransactionJob.cc
    AbortTransactionJob.h
    AddReplicaQservMgtRequest.cc
    AddReplicaQservMgtRequest.h
    AdminApp.cc
    AdminApp.h
    Application.cc
    Application.h
    ApplicationColl.cc
    ApplicationColl.h
    ApplicationTypes.cc
    ApplicationTypes.h
    CheckSumApp.cc
    CheckSumApp.h
    ChunkLocker.cc
    ChunkLocker.h
    ChunkNumber.cc
    ChunkNumber.h
    ChunkedTable.cc
    ChunkedTable.h
    ChunksApp.cc
    ChunksApp.h
    ClusterHealthApp.cc
    ClusterHealthApp.h
    ClusterHealthJob.cc
    ClusterHealthJob.h
    Common.cc
    Common.h
    ConfigApp.cc
    ConfigApp.h
    ConfigAppBase.cc
    ConfigAppBase.h
    ConfigDatabase.cc
    ConfigDatabase.h
    ConfigDatabaseFamily.cc
    ConfigDatabaseFamily.h
    ConfigParserJSON.cc
    ConfigParserJSON.h
    ConfigParserMySQL.cc
    ConfigParserMySQL.h
    ConfigTestApp.cc
    ConfigTestApp.h
    ConfigTestData.cc
    ConfigTestData.h
    ConfigWorker.cc
    ConfigWorker.h
    Configuration.cc
    Configuration.h
    ConfigurationExceptions.h
    ConfigurationSchema.cc
    ConfigurationSchema.h
    Controller.cc
    Controller.h
    ControllerApp.cc
    ControllerApp.h
    CreateReplicaJob.cc
    CreateReplicaJob.h
    Csv.cc
    Csv.h
    DatabaseMySQL.cc
    DatabaseMySQL.h
    DatabaseMySQLExceptions.h
    DatabaseMySQLRow.cc
    DatabaseMySQLRow.h
    DatabaseMySQLTypes.cc
    DatabaseMySQLTypes.h
    DatabaseServices.cc
    DatabaseServices.h
    DatabaseServicesMySQL.cc
    DatabaseServicesMySQL.h
    DatabaseServicesPool.cc
    DatabaseServicesPool.h
    DatabaseTestApp.cc
    DatabaseTestApp.h
    DeleteReplicaJob.cc
    DeleteReplicaJob.h
    DeleteRequest.cc
    DeleteRequest.h
    DeleteWorkerApp.cc
    DeleteWorkerApp.h
    DeleteWorkerJob.cc
    DeleteWorkerJob.h
    DeleteWorkerTask.cc
    DeleteWorkerTask.h
    DisposeRequest.cc
    DisposeRequest.h
    EchoRequest.cc
    EchoRequest.h
    ErrorReporting.h
    EventLogger.cc
    EventLogger.h
    ExportClient.cc
    ExportClient.h
    ExportServer.cc
    ExportServer.h
    ExportServerConnection.cc
    ExportServerConnection.h
    FileClient.cc
    FileClient.h
    FileExportApp.cc
    FileExportApp.h
    FileIngestApp.cc
    FileIngestApp.h
    FileReadApp.cc
    FileReadApp.h
    FileServer.cc
    FileServer.h
    FileServerApp.cc
    FileServerApp.h
    FileServerConnection.cc
    FileServerConnection.h
    FileUtils.cc
    FileUtils.h
    FindAllJob.cc
    FindAllJob.h
    FindAllRequest.cc
    FindAllRequest.h
    FindRequest.cc
    FindRequest.h
    FixUpApp.cc
    FixUpApp.h
    FixUpJob.cc
    FixUpJob.h
    GetReplicasQservMgtRequest.cc
    GetReplicasQservMgtRequest.h
    GetStatusQservMgtRequest.cc
    GetStatusQservMgtRequest.h
    HealthMonitorTask.cc
    HealthMonitorTask.h
    HttpClient.cc
    HttpClient.h
    HttpClientApp.cc
    HttpClientApp.h
    HttpCatalogsModule.cc
    HttpCatalogsModule.h
    HttpConfigurationModule.cc
    HttpConfigurationModule.h
    HttpControllersModule.cc
    HttpControllersModule.h
    HttpExceptions.cc
    HttpExceptions.h
    HttpExportModule.cc
    HttpExportModule.h
    HttpIngestChunksModule.cc
    HttpIngestChunksModule.h
    HttpIngestConfigModule.cc
    HttpIngestConfigModule.h
    HttpIngestIndexModule.cc
    HttpIngestIndexModule.h
    HttpIngestModule.cc
    HttpIngestModule.h
    HttpIngestTransModule.cc
    HttpIngestTransModule.h
    HttpJobsModule.cc
    HttpJobsModule.h
    HttpMetaModule.cc
    HttpMetaModule.h
    HttpModule.cc
    HttpModule.h
    HttpModuleBase.cc
    HttpModuleBase.h
    HttpProcessor.cc
    HttpProcessor.h
    HttpProcessorConfig.h
    HttpQservMonitorModule.cc
    HttpQservMonitorModule.h
    HttpQservSqlModule.cc
    HttpQservSqlModule.h
    HttpReplicationLevelsModule.cc
    HttpReplicationLevelsModule.h
    HttpRequestBody.cc
    HttpRequestBody.h
    HttpRequestQuery.cc
    HttpRequestQuery.h
    HttpRequestsModule.cc
    HttpRequestsModule.h
    HttpSqlIndexModule.cc
    HttpSqlIndexModule.h
    HttpSqlSchemaModule.cc
    HttpSqlSchemaModule.h
    HttpSvc.cc
    HttpSvc.h
    HttpWorkerStatusModule.cc
    HttpWorkerStatusModule.h
    IndexApp.cc
    IndexApp.h
    IndexJob.cc
    IndexJob.h
    IndexRequest.cc
    IndexRequest.h
    IngestClient.cc
    IngestClient.h
    IngestFileSvc.cc
    IngestFileSvc.h
    IngestHttpSvc.cc
    IngestHttpSvc.h
    IngestHttpSvcMod.cc
    IngestHttpSvcMod.h
	IngestRequest.cc
	IngestRequest.h
	IngestRequestMgr.cc
	IngestRequestMgr.h
    IngestSvc.cc
    IngestSvc.h
    IngestSvcConn.cc
    IngestSvcConn.h
    Job.cc
    Job.h
    MasterControllerHttpApp.cc
    MasterControllerHttpApp.h
    MessageQueue.h
    Messenger.cc
    Messenger.h
    MessengerConnector.cc
    MessengerConnector.h
    MessengerTestApp.cc
    MessengerTestApp.h
    MoveApp.cc
    MoveApp.h
    MoveReplicaJob.cc
    MoveReplicaJob.h
    MySQLTestApp.cc
    MySQLTestApp.h
    NamedMutexRegistry.cc
    NamedMutexRegistry.h
    OneWayFailer.h
    Performance.cc
    Performance.h
    ProtocolBuffer.cc
    ProtocolBuffer.h
    PurgeApp.cc
    PurgeApp.h
    PurgeJob.cc
    PurgeJob.h
    QhttpTestApp.cc
    QhttpTestApp.h
    QservGetReplicasJob.cc
    QservGetReplicasJob.h
    QservMgtRequest.cc
    QservMgtRequest.h
    QservMgtServices.cc
    QservMgtServices.h
    QservStatusJob.cc
    QservStatusJob.h
    QservSyncJob.cc
    QservSyncJob.h
    QservWorkerApp.cc
    QservWorkerApp.h
    QservWorkerPingApp.cc
    QservWorkerPingApp.h
    RebalanceApp.cc
    RebalanceApp.h
    RebalanceJob.cc
    RebalanceJob.h
    RedirectorHttpApp.h
    RedirectorHttpApp.cc
    RedirectorHttpSvc.h
    RedirectorHttpSvc.cc
    RedirectorHttpSvcMod.h
    RedirectorHttpSvcMod.cc
    RedirectorWorkers.h
    RedirectorWorkers.cc
    RemoveReplicaQservMgtRequest.cc
    RemoveReplicaQservMgtRequest.h
    ReplicaInfo.cc
    ReplicaInfo.h
    ReplicateApp.cc
    ReplicateApp.h
    ReplicateJob.cc
    ReplicateJob.h
    ReplicationRequest.cc
    ReplicationRequest.h
    ReplicationTask.cc
    ReplicationTask.h
    Request.cc
    Request.h
    RequestMessenger.cc
    RequestMessenger.h
    RequestTracker.cc
    RequestTracker.h
    SemanticMaps.h
    ServiceManagementJob.cc
    ServiceManagementJob.h
    ServiceManagementRequest.cc
    ServiceManagementRequest.h
    ServiceManagementRequestBase.cc
    ServiceManagementRequestBase.h
    ServiceProvider.cc
    ServiceProvider.h
    SetReplicasQservMgtRequest.cc
    SetReplicasQservMgtRequest.h
    SqlAlterTablesJob.cc
    SqlAlterTablesJob.h
    SqlAlterTablesRequest.cc
    SqlAlterTablesRequest.h
    SqlApp.cc
    SqlApp.h
    SqlCreateDbJob.cc
    SqlCreateDbJob.h
    SqlCreateDbRequest.cc
    SqlCreateDbRequest.h
    SqlCreateIndexesJob.cc
    SqlCreateIndexesJob.h
    SqlCreateIndexesRequest.cc
    SqlCreateIndexesRequest.h
    SqlCreateTableJob.cc
    SqlCreateTableJob.h
    SqlCreateTableRequest.cc
    SqlCreateTableRequest.h
    SqlCreateTablesJob.cc
    SqlCreateTablesJob.h
    SqlCreateTablesRequest.cc
    SqlCreateTablesRequest.h
    SqlDeleteDbJob.cc
    SqlDeleteDbJob.h
    SqlDeleteDbRequest.cc
    SqlDeleteDbRequest.h
    SqlDeleteTableJob.cc
    SqlDeleteTableJob.h
    SqlDeleteTablePartitionJob.cc
    SqlDeleteTablePartitionJob.h
    SqlDeleteTablePartitionRequest.cc
    SqlDeleteTablePartitionRequest.h
    SqlDeleteTableRequest.cc
    SqlDeleteTableRequest.h
    SqlDisableDbJob.cc
    SqlDisableDbJob.h
    SqlDisableDbRequest.cc
    SqlDisableDbRequest.h
    SqlDropIndexesJob.cc
    SqlDropIndexesJob.h
    SqlDropIndexesRequest.cc
    SqlDropIndexesRequest.h
    SqlEnableDbJob.cc
    SqlEnableDbJob.h
    SqlEnableDbRequest.cc
    SqlEnableDbRequest.h
    SqlGetIndexesJob.cc
    SqlGetIndexesJob.h
    SqlGetIndexesRequest.cc
    SqlGetIndexesRequest.h
    SqlGrantAccessJob.cc
    SqlGrantAccessJob.h
    SqlGrantAccessRequest.cc
    SqlGrantAccessRequest.h
    SqlJob.cc
    SqlJob.h
    SqlJobResult.cc
    SqlJobResult.h
    SqlQueryJob.cc
    SqlQueryJob.h
    SqlQueryRequest.cc
    SqlQueryRequest.h
    SqlRemoveTablePartitionsJob.cc
    SqlRemoveTablePartitionsJob.h
    SqlRemoveTablePartitionsRequest.cc
    SqlRemoveTablePartitionsRequest.h
    SqlRequest.cc
    SqlRequest.h
    SqlResultSet.cc
    SqlResultSet.h
    SqlRowStatsJob.cc
    SqlRowStatsJob.h
    SqlRowStatsRequest.cc
    SqlRowStatsRequest.h
    SqlSchemaUtils.cc
    SqlSchemaUtils.h
    StatusRequest.cc
    StatusRequest.h
    StatusRequestBase.cc
    StatusRequestBase.h
    StopRequest.cc
    StopRequest.h
    StopRequestBase.cc
    StopRequestBase.h
    SuccessRateGenerator.cc
    SuccessRateGenerator.h
    SyncApp.cc
    SyncApp.h
    Task.cc
    Task.h
    TestEchoQservMgtRequest.cc
    TestEchoQservMgtRequest.h
    TransactionsApp.cc
    TransactionsApp.h
    Url.cc
    Url.h
    VerifyApp.cc
    VerifyApp.h
    VerifyJob.cc
    VerifyJob.h
    WorkerApp.cc
    WorkerApp.h
    WorkerDeleteRequest.cc
    WorkerDeleteRequest.h
    WorkerEchoRequest.cc
    WorkerEchoRequest.h
    WorkerFindAllRequest.cc
    WorkerFindAllRequest.h
    WorkerFindRequest.cc
    WorkerFindRequest.h
    WorkerIndexRequest.cc
    WorkerIndexRequest.h
    WorkerProcessor.cc
    WorkerProcessor.h
    WorkerProcessorThread.cc
    WorkerProcessorThread.h
    WorkerReplicationRequest.cc
    WorkerReplicationRequest.h
    WorkerRequest.cc
    WorkerRequest.h
    WorkerRequestFactory.cc
    WorkerRequestFactory.h
    WorkerServer.cc
    WorkerServer.h
    WorkerServerConnection.cc
    WorkerServerConnection.h
    WorkerSqlRequest.cc
    WorkerSqlRequest.h
    XrdCmsgetVnId.cc
)

target_include_directories(replica PRIVATE
    ${XROOTD_INCLUDE_DIRS}
    ${XROOTD_INCLUDE_DIRS}/private
)

target_link_libraries(replica PUBLIC
    qserv_css
    xrdsvc
    XrdCl
    XrdSsiLib
    qhttp
    sphgeom
    partition
    protobuf
    boost_filesystem
    boost_system
    log
    pthread
    crypto
    curl
)

FUNCTION(REPLICA_UTILS)
    FOREACH(UTIL IN ITEMS ${ARGV})
        add_executable(${UTIL})
        target_sources(${UTIL} PRIVATE tools/${UTIL}.cc)
        target_include_directories(${UTIL} PRIVATE ${XROOTD_INCLUDE_DIRS} ${XROOTD_INCLUDE_DIRS}/private)
        target_link_libraries(${UTIL} PRIVATE replica)
        install(TARGETS ${UTIL})
    ENDFOREACH()
ENDFUNCTION()

replica_utils(
    qserv-replica-calc-cs
    qserv-replica-config-test
    qserv-replica-config
    qserv-replica-controller-cmd
    qserv-replica-file
    qserv-replica-job
    qserv-replica-master-http
    qserv-replica-redirector
    qserv-replica-test
    qserv-replica-worker-notify
    qserv-replica-worker
)

install(DIRECTORY python/ DESTINATION ${CMAKE_INSTALL_PREFIX}/python/lsst/qserv/replica)
install(DIRECTORY schema/ DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/smig/replica/schema/)

install(
    TARGETS replica
)

FUNCTION(REPLICA_TESTS)
    FOREACH(TEST IN ITEMS ${ARGV})
        add_executable(${TEST} ${TEST}.cc)
        target_link_libraries(${TEST} PUBLIC
            replica
            Boost::unit_test_framework
            Threads::Threads
        )
        add_test(NAME ${TEST} COMMAND ${TEST})
    ENDFOREACH()
ENDFUNCTION()

replica_tests(
    testApplicationParser
    testChunkLocker
    testChunkNumber
    testChunkedTable
    testCommonStr
    testConnectionParams
    testCsv
    testFileIngestApp
    testFileUtils
    testJson
    testMessageQueue
    testNamedMutexRegistry
    testReplicaInfo
    testSemanticMap
    testSqlSchemaUtils
    testTypes
    testUrl
    testConfiguration
)
