protobuf_generate_cpp(REPLICA_PB_SRCS REPLICA_PB_HDRS protocol.proto)

add_library(replica SHARED)

target_compile_options(replica PRIVATE
    -Wno-maybe-uninitialized
)

target_sources(replica PRIVATE
    ${REPLICA_PB_SRCS}
    ${REPLICA_PB_HDRS}
    AbortTransactionApp.cc
    AbortTransactionJob.cc
    AddReplicaQservMgtRequest.cc
    AdminApp.cc
    Application.cc
    ApplicationColl.cc
    ApplicationTypes.cc
    CheckSumApp.cc
    ChunkLocker.cc
    ChunkNumber.cc
    ChunkedTable.cc
    ChunksApp.cc
    ClusterHealthApp.cc
    ClusterHealthJob.cc
    Common.cc
    ConfigApp.cc
    ConfigAppBase.cc
    ConfigDatabase.cc
    ConfigDatabaseFamily.cc
    ConfigParserJSON.cc
    ConfigParserMySQL.cc
    ConfigTable.cc
    ConfigTestApp.cc
    ConfigTestData.cc
    ConfigWorker.cc
    Configuration.cc
    ConfigurationSchema.cc
    Controller.cc
    ControllerApp.cc
    CreateReplicaJob.cc
    Csv.cc
    DatabaseMySQL.cc
    DatabaseMySQLGenerator.cc
    DatabaseMySQLRow.cc
    DatabaseMySQLTypes.cc
    DatabaseMySQLUtils.cc
    DatabaseServices.cc
    DatabaseServicesMySQL.cc
    DatabaseServicesPool.cc
    DatabaseTestApp.cc
    DeleteReplicaJob.cc
    DeleteRequest.cc
    DeleteWorkerApp.cc
    DeleteWorkerJob.cc
    DeleteWorkerTask.cc
    DisposeRequest.cc
    EchoRequest.cc
    EventLogger.cc
    ExportClient.cc
    ExportServer.cc
    ExportServerConnection.cc
    FileClient.cc
    FileExportApp.cc
    FileIngestApp.cc
    FileReadApp.cc
    FileServer.cc
    FileServerApp.cc
    FileServerConnection.cc
    FileUtils.cc
    FindAllJob.cc
    FindAllRequest.cc
    FindRequest.cc
    FixUpApp.cc
    FixUpJob.cc
    GetReplicasQservMgtRequest.cc
    GetDbStatusQservMgtRequest.cc
    GetConfigQservMgtRequest.cc
    GetStatusQservMgtRequest.cc
    HealthMonitorTask.cc
    HttpAsyncReqApp.cc
    HttpClientApp.cc
    HttpCatalogsModule.cc
    HttpConfigurationModule.cc
    HttpControllersModule.cc
    HttpDirectorIndexModule.cc
    HttpExportModule.cc
    HttpIngestChunksModule.cc
    HttpIngestConfigModule.cc
    HttpIngestModule.cc
    HttpIngestTransModule.cc
    HttpJobsModule.cc
    HttpModule.cc
    HttpProcessor.cc
    HttpQservMonitorModule.cc
    HttpQservSqlModule.cc
    HttpReplicationLevelsModule.cc
    HttpRequestsModule.cc
    HttpSqlIndexModule.cc
    HttpSqlSchemaModule.cc
    HttpSvc.cc
    HttpWorkerStatusModule.cc
    DirectorIndexApp.cc
    DirectorIndexJob.cc
    DirectorIndexRequest.cc
    IngestClient.cc
    IngestFileSvc.cc
    IngestHttpSvc.cc
    IngestHttpSvcMod.cc
	IngestRequest.cc
	IngestRequestMgr.cc
    IngestResourceMgr.cc
    IngestResourceMgrP.cc
    IngestResourceMgrT.cc
    IngestSvc.cc
    IngestSvcConn.cc
    Job.cc
    MasterControllerHttpApp.cc
    Messenger.cc
    MessengerConnector.cc
    MessengerTestApp.cc
    MoveApp.cc
    MoveReplicaJob.cc
    MySQLTestApp.cc
    Mutex.cc
    NamedMutexRegistry.cc
    Performance.cc
    ProtocolBuffer.cc
    PurgeApp.cc
    PurgeJob.cc
    QhttpTestApp.cc
    QservGetReplicasJob.cc
    QservMgtRequest.cc
    QservMgtServices.cc
    QservStatusJob.cc
    QservSyncJob.cc
    QservWorkerApp.cc
    QservWorkerPingApp.cc
    RebalanceApp.cc
    RebalanceJob.cc
    Registry.cc
    RegistryHttpApp.cc
    RegistryHttpSvc.cc
    RegistryHttpSvcMod.cc
    RegistryWorkers.cc
    RemoveReplicaQservMgtRequest.cc
    ReplicaInfo.cc
    ReplicateApp.cc
    ReplicateJob.cc
    ReplicationRequest.cc
    ReplicationTask.cc
    Request.cc
    RequestMessenger.cc
    RequestTracker.cc
    ServiceManagementJob.cc
    ServiceManagementRequest.cc
    ServiceManagementRequestBase.cc
    ServiceProvider.cc
    SetReplicasQservMgtRequest.cc
    SqlAlterTablesJob.cc
    SqlAlterTablesRequest.cc
    SqlApp.cc
    SqlCreateDbJob.cc
    SqlCreateDbRequest.cc
    SqlCreateIndexesJob.cc
    SqlCreateIndexesRequest.cc
    SqlCreateTableJob.cc
    SqlCreateTableRequest.cc
    SqlCreateTablesJob.cc
    SqlCreateTablesRequest.cc
    SqlDeleteDbJob.cc
    SqlDeleteDbRequest.cc
    SqlDeleteTableJob.cc
    SqlDeleteTablePartitionJob.cc
    SqlDeleteTablePartitionRequest.cc
    SqlDeleteTableRequest.cc
    SqlDisableDbJob.cc
    SqlDisableDbRequest.cc
    SqlDropIndexesJob.cc
    SqlDropIndexesRequest.cc
    SqlEnableDbJob.cc
    SqlEnableDbRequest.cc
    SqlGetIndexesJob.cc
    SqlGetIndexesRequest.cc
    SqlGrantAccessJob.cc
    SqlGrantAccessRequest.cc
    SqlJob.cc
    SqlJobResult.cc
    SqlQueryJob.cc
    SqlQueryRequest.cc
    SqlRemoveTablePartitionsJob.cc
    SqlRemoveTablePartitionsRequest.cc
    SqlRequest.cc
    SqlResultSet.cc
    SqlRowStatsJob.cc
    SqlRowStatsRequest.cc
    SqlSchemaUtils.cc
    StatusRequest.cc
    StatusRequestBase.cc
    StopRequest.cc
    StopRequestBase.cc
    SuccessRateGenerator.cc
    SyncApp.cc
    Task.cc
    TestEchoQservMgtRequest.cc
    TransactionContrib.cc
    TransactionsApp.cc
    VerifyApp.cc
    VerifyJob.cc
    WorkerApp.cc
    WorkerDeleteRequest.cc
    WorkerDirectorIndexRequest.cc
    WorkerEchoRequest.cc
    WorkerFindAllRequest.cc
    WorkerFindRequest.cc
    WorkerProcessor.cc
    WorkerProcessorThread.cc
    WorkerReplicationRequest.cc
    WorkerRequest.cc
    WorkerRequestFactory.cc
    WorkerServer.cc
    WorkerServerConnection.cc
    WorkerSqlRequest.cc
    XrdCmsgetVnId.cc
)

target_include_directories(replica PRIVATE
    ${XROOTD_INCLUDE_DIRS}
)

target_link_libraries(replica PUBLIC
    qserv_css
    xrdreq
    xrdsvc
    XrdCl
    XrdSsiLib
    http
    qhttp
    sphgeom
    partition
    protobuf
    boost_filesystem
    boost_system
    log
    pthread
    crypto
    curl
)

function(REPLICA_UTILS)
    foreach(UTIL IN ITEMS ${ARGV})
        add_executable(${UTIL})
        target_sources(${UTIL} PRIVATE tools/${UTIL}.cc)
        target_include_directories(${UTIL} PRIVATE ${XROOTD_INCLUDE_DIRS})
        target_link_libraries(${UTIL} PRIVATE
            replica
        )
        install(TARGETS ${UTIL})
    endforeach()
endfunction()

replica_utils(
    qserv-replica-calc-cs
    qserv-replica-config-test
    qserv-replica-config
    qserv-replica-controller-cmd
    qserv-replica-file
    qserv-replica-job
    qserv-replica-master-http
    qserv-replica-registry
    qserv-replica-test
    qserv-replica-worker-notify
    qserv-replica-worker
)

install(DIRECTORY python/ DESTINATION ${CMAKE_INSTALL_PREFIX}/python/lsst/qserv/replica)
install(DIRECTORY schema/ DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/smig/replica/schema/)

install(
    TARGETS replica
)

function(REPLICA_TESTS)
    foreach(TEST IN ITEMS ${ARGV})
        add_executable(${TEST} ${TEST}.cc)
        target_link_libraries(${TEST} PUBLIC
            replica
            Boost::unit_test_framework
            Threads::Threads
        )
        add_test(NAME ${TEST} COMMAND ${TEST})
    endforeach()
endfunction()

replica_tests(
    testApplicationParser
    testChunkLocker
    testChunkNumber
    testChunkedTable
    testConnectionParams
    testCsv
    testFileIngestApp
    testFileUtils
    testIngestRequestMgr
    testJson
    testMessageQueue
    testNamedMutexRegistry
    testQueryGenerator
    testReplicaInfo
    testSemanticMap
    testSqlResultSet
    testSqlSchemaUtils
    testTaskSelector
    testTypes
    testConfiguration
)
